--- a/.github/workflows/einzelobjekte.yml
+++ b/.github/workflows/einzelobjekte.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -19,3 +19,21 @@ jobs:
 
       - name: DMAV.Einzelobjekte
         run: java -jar ./_Runner/interlis-testbed-runner-1.0.0/lib/interlis-testbed-runner-1.0.0.jar -v ./_Runner/ilivalidator-1.14.3/ilivalidator-1.14.3.jar ./Testsuite_DMAV-1
+
+  test-failcases-igcheck:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install IGCheck
+        run: |
+          curl -L -o igcheck2.zip https://www.interlis.ch/download/interlis2/igcheck2_20241218.zip
+          tar -xf igcheck2.zip
+          .\igcheck2.exe /S
+          $env:PATH += ";C:\igcheck2\system\bin"
+
+      - name: DMAV.Einzelobjekte
+        run: igcheck2 ./Testsuite_DMAV-1/DMAVTYM_Alles_V1_0.xtf
+
