--- a/.github/workflows/einzelobjekte.yml
+++ b/.github/workflows/einzelobjekte.yml
@@ -36,6 +36,7 @@ jobs:
           .\igcheck2.exe /S
           echo "C:\igcheck2\system\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           mkdir c:\igcheck2\data\temp
+          mkdir C:\igcheck2\user\license
           $env.IGCHECK_LICENSE | Out-File -FilePath  C:\igcheck2\user\license\igcheck2.lic -Encoding utf8
 
       - name: DMAV.Einzelobjekte
