--- a/.github/workflows/einzelobjekte.yml
+++ b/.github/workflows/einzelobjekte.yml
@@ -37,7 +37,7 @@ jobs:
           echo "C:\igcheck2\system\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           mkdir c:\igcheck2\data\temp
           mkdir C:\igcheck2\user\license
-          $env.IGCHECK_LICENSE | Out-File -FilePath  C:\igcheck2\user\license\igcheck2.lic -Encoding utf8
+          $env:IGCHECK_LICENSE | Out-File -FilePath  C:\igcheck2\user\license\igcheck2.lic -Encoding utf8
           cat C:\igcheck2\user\license\igcheck2.lic
 
       - name: DMAV.Einzelobjekte
