--- a/.github/workflows/einzelobjekte.yml
+++ b/.github/workflows/einzelobjekte.yml
@@ -39,6 +39,7 @@ jobs:
           mkdir C:\igcheck2\user\license
           $env:IGCHECK_LICENSE | Out-File -FilePath  C:\igcheck2\user\license\igcheck2.lic -Encoding utf8
           ls -r C:\igcheck2\
+          ls -r c:\igcheck2\
 
       - name: DMAV.Einzelobjekte
         run: igcheck2 .\Testsuite_DMAV-1\DMAVTYM_Alles_V1_0.xtf .\Testsuite_DMAV-1\DMAV_Einzelobjekte_V1_0.ili
