--- a/.github/workflows/einzelobjekte.yml
+++ b/.github/workflows/einzelobjekte.yml
@@ -38,8 +38,12 @@ jobs:
           mkdir c:\igcheck2\data\temp
           mkdir C:\igcheck2\user\license
           $env:IGCHECK_LICENSE | Out-File -FilePath  C:\igcheck2\user\license\igcheck2.lic -Encoding utf8
-          ls -r C:\igcheck2\
-          ls -r c:\igcheck2\
+
+      - name: Test environment
+        run: |
+          Get-Command igcheck2
+          Get-Command igcheck2 | cat
+          Get-ChildItem C:\igcheck2
 
       - name: DMAV.Einzelobjekte
         run: igcheck2 .\Testsuite_DMAV-1\DMAVTYM_Alles_V1_0.xtf .\Testsuite_DMAV-1\DMAV_Einzelobjekte_V1_0.ili
