--- a/.github/workflows/DMAV-Bodenbedeckung.yml
+++ b/.github/workflows/DMAV-Bodenbedeckung.yml
@@ -17,5 +17,5 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: DMAV.Bodenbedeckung
+      - name: Run DMAV_Bodenbedeckung_V1_0
         run: java -jar ./_Runner/interlis-testbed-runner-1.0.1/lib/interlis-testbed-runner-1.0.1-SNAPSHOT.jar -v ./_Runner/ilivalidator-1.14.6/ilivalidator-1.14.6-SNAPSHOT.jar --config  ./Testsuite_DMAV/DMAV_V1_0_Validierung-meta.ini ./Testsuite_DMAV/DMAV_Bodenbedeckung_V1_0
