--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 # Project-specific files and folders
 test_data/models/
-test_data/output/
+**/output/
 misc/
-Testsuite_DMAV/DMAV_Einzelobjekte_V1_0/output/
-Testsuite_DMAV/DMAV_Bodenbedeckung_V1_0/output/
-Testsuite_DMAV/DMAV_Grundstuecke_V1_0/output/
 
 ### VS Code ###
 .vscode/
